--- a/Temperaturer/Temperaturer/Temperaturer.csproj
+++ b/Temperaturer/Temperaturer/Temperaturer.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Style.css" />
     <Content Include="Default.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
