--- a/Temperaturer/Temperaturer/Temperaturer.csproj
+++ b/Temperaturer/Temperaturer/Temperaturer.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Content Include="Content\Style.css" />
     <Content Include="Default.aspx" />
+    <Content Include="Error.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
